# dimos

./: .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  FastSAM-s.onnx  README.md  default.env  dev.sh  flake.nix  pyproject.toml  requirements.txt  uv.lock.REMOVED.git-id  yolo11n.onnx
.github/workflows/: code-cleanup.yml  docker.yml  tests.yml
autoresearch/: optimizations.py
dimos/: __init__.py  conftest.py  constants.py  test_no_init_files.py  test_no_sections.py
dimos/agents/: __init__.py  agent.py  agent_config.py  agent_ctransformers_gguf.py  agent_huggingface_local.py  agent_huggingface_remote.py  agent_test_runner.py  agent_types.py  annotation.py  cerebras_agent.py  claude_agent.py  conftest.py  demo_agent.py  llm_init.py  planning_agent.py  spec.py  system_prompt.py  test_agent.py  test_agent_fake.py  test_agent_image_message.py  test_agent_message_streams.py  test_agent_pool.py  test_agent_tools.py  test_agent_with_modules.py  test_base_agent_text.py  test_conversation_history.py  test_gateway.py  test_mock_agent.py  test_simple_agent_module.py  vlm_agent.py  vlm_stream_tester.py
dimos/agents2/: __init__.py  agent.py  agent_refactor.md  conftest.py  spec.py  system_prompt.py  test_agent.py  test_agent_direct.py  test_mock_agent.py  test_stash_agent.py  testing.py
dimos/control/: __init__.py  blueprints.py  components.py  coordinator.py  hardware_interface.py  orchestrator.py  task.py  test_control.py  tick_loop.py
dimos/core/: README_BLUEPRINTS.md  __init__.py  arduino_module.py  blueprints.py  conftest.py  core.py  daemon.py  docker_build.py  docker_module.py  docker_runner.py  docker_worker_manager.py  global_config.py  instance_registry.py  module.py  module_coordinator.py  module_dask.py  native_module.py  observability.py  rpc_client.py  run_registry.py  skill_module.py  stream.py  test_blueprints.py  test_core.py  test_daemon.py  test_e2e_daemon.py  test_mcp_integration.py  test_modules.py  test_native_module.py  test_rpcstress.py  test_run_registry.py  test_stream.py  test_worker.py  transport.py  worker.py  worker_manager.py  worker_manager_docker.py
dimos/dashboard/: __init__.py  module.py  rerun_init.py  server.py
dimos/e2e_tests/: conftest.py  dimos_cli_call.py  lcm_spy.py  test_control_coordinator.py  test_control_orchestrator.py  test_dimos_cli_e2e.py  test_dimsim_eval_parallel.py  test_person_follow.py  test_simulation_module.py  test_spatial_memory.py
dimos/hardware/: fake_zed_module.py  gstreamer_camera.py  piper_arm.py  ufactory.py  zed_camera.py
dimos/manipulation/: blueprints.py  manip_aio_pipeline.py  manip_aio_processer.py  manipulation_interface.py  manipulation_module.py  pick_and_place_module.py
dimos/mapping/: costmapper.py  test_voxels.py  voxels.py
dimos/memory/: __init__.py  codec.py  embedding.py  ingest.py  store.py  stream.py  test_projection.py  transformer.py
dimos/memory2/: __init__.py  backend.py  conftest.py  filter.py  module.py  store.py  stream.py  test_blobstore_integration.py  test_e2e.py  test_embedding.py  test_impl.py  test_module.py  test_save.py  test_store.py  test_stream.py  transform.py  voxel_map.py
dimos/models/: base.py  test_base.py
dimos/navigation/: demo_ros_navigation.py  rosnav.py  rosnav_docker.py  scan_corrector.py
dimos/perception/: demo_object_scene_registration.py  manip_aio_processer.py  object_detection_stream.py  object_scene_registration.py  object_tracker.py  object_tracker_2d.py  object_tracker_3d.py  perceive_loop_skill.py  person_tracker.py  spatial_perception.py  test_spatial_memory.py  test_spatial_memory_module.py
dimos/perception/slam/orbslam3/cpp/: CMakeLists.txt  flake.nix  main.cpp
dimos/porcelain/: conftest.py  dimos.py  local_module_source.py  module_source.py  remote_module_source.py  skills_proxy.py  test_dimos.py  test_local_module_source.py  test_remote_module_source.py  test_skills_proxy.py
dimos/robot/: __init__.py  all_blueprints.py  foxglove_bridge.py  get_all_blueprints.py  local_planner.py  robot.py  ros_bridge.py  ros_control.py  ros_observable_topic.py  ros_skill_library.py  ros_transform.py  skills.py  test_all_blueprints.py  test_all_blueprints_generation.py  test_get_all_blueprints.py  test_ros_bridge.py  test_ros_observable_topic.py
dimos/simulation/: sim_blueprints.py
dimos/skills/: navigation.py  observe_stream.py  skills.py
dimos/spec/: __init__.py  mapping.py  utils.py
dimos/stream/: frame_processor.py  ros_video_provider.py  video_operators.py  video_provider.py  videostream.py
dimos/types/: costmap.py  path.py  ros_polyfill.py  test_timestamped.py  timestamped.py  vector.py
dimos/utils/: change_detect.py  data.py  demo_image_encoding.py  generic.py  logging_config.py  metrics.py  monitoring.py  prompt.py  ros1.py  ros_utils.py  safe_thread_map.py  test_generic.py  test_import_time_lfs.py  test_reactive.py  test_testing.py  test_thread_utils.py  testing.py
dimos/web/: fastapi_server.py  flask_server.py  robot_web_interface.py
docker/dev/: Dockerfile
docker/interface/: docker-compose.yml
docker/jetson/: README.md
docker/navigation/: .env.hardware  Dockerfile  README.md  build.sh  docker-compose.yml  start.sh
docker/python/: Dockerfile
docker/simulation/: Dockerfile  (+1 more)
docs/: data.md  depth_camera_integration.md  install_and_setup.md  modules.md
examples/: camera_grayscale.py  rpc_calls.py
ros_docker_integration/: Dockerfile  README.md  build.sh  docker-compose.yml  ros_launch_wrapper.py  run_both.sh  run_command.sh  shell.sh  start.sh  start_clean.sh  test_integration.sh
scripts/: install.sh
tests/: agent_manip_flow_fastapi_test.py  agent_manip_flow_flask_test.py  run.py  run_webrtc.py  test_cerebras_agent_mock.py  test_claude_agent_skills_query.py  test_ibvs.py  test_monitor_skill.py  test_navigation_skills.py  test_object_detection_stream.py  test_object_tracking_module.py  test_person_following_robot.py  test_planning_robot_agent.py  test_semantic_seg_robot_agent.py  test_unitree_agent.py  test_unitree_agent_queries_fastapi.py  test_unitree_ros_v0.0.4.py  test_websocketvis.py
(+703 files in other folders)
