[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dimos"
version = "0.1.0"
description = "A dimensional operating system for robotics and AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "dimos contributors" },
]
keywords = ["robotics", "ai", "agents", "ros", "dimensional"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pydantic>=2.0",
  "reactivex>=4.0",
  "openai>=1.0",
  "anthropic>=0.20",
  "pillow>=10.0",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "loguru>=0.7",
]

[project.optional-dependencies]
ros = [
  "rclpy",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "black>=23.0",
  "ruff>=0.1",
  "mypy>=1.5",
  "pre-commit>=3.5",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/dimensionalOS/dimos"
Repository = "https://github.com/dimensionalOS/dimos"
Issues = "https://github.com/dimensionalOS/dimos/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov flags so tests run faster locally without coverage overhead
# -p no:warnings added to suppress noisy deprecation warnings during dev
# -x added personally: stop on first failure so I can fix issues one at a time
addopts = "-v -p no:warnings -x"

[tool.coverage.run]
source = ["src/dimos"]
omit = ["tests/*"]
